--- a/src/App.css
+++ b/src/App.css
@@ -35,35 +35,189 @@
   to {
     transform: rotate(360deg);
   }
+
 }
 
 body {
-  background-color: lightgray;
+  background-color: #efefef;;
 }
 nav{
-  border: 2px solid red;
-  height: 50px;
+  /* border: 2px solid red; */
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #1876f2;
-  padding: 5px;
+  /* background-color: rgb(203, 223, 250) ; */
+  padding: 5px 5%;
+  position: sticky;
+  top: o;
+  z-index: 100;
 }
+
 .logo{
-  width: 150px;
-  margin-right: 50px;
+  height: 60px;
+  width: 160px;
+  margin-right: 20px;
+} 
+
+.navBar-left{
+  display: flex;
+  align-items: center;
 }
+ul li{
+  list-style: none;
+  display: inline-block;
+  /* margin-left: 50px; */
+  margin-right: 30px;
+}
+ul li img{
+width: 50px;
+margin: 0 15px;
+margin-left: 80px;
+
+}
+.navUserImg img{
+  width: 50px;
+  border-radius: 50% ;
+  /* border: 1px solid navy; */
+  cursor: pointer;
+}
+.navUserImg{
+  margin-left: 30px;
+}
+
+.searchBox{
+  background: #efefef;
+  width: 350px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  
+}
+.searchBox img{
+  width: 18px;
+}
+.searchBox input{
+  width: 100%;
+  background-color: transparent;
+  padding: 10px;
+  outline: none;
+  border: none;
+
+}
+
 .container {
   display: flex; 
+  justify-content: space-between;
+  padding: 12px 5px;
 }
 .leftcontainer{
-  height: 800px;
-  border: 2px solid blue;
-  width: 30%;
+  /* border: 2px solid blue; */
+  flex-basis: 25%;
+  position: sticky;
+  align-self: flex-start;
+  top: 70px;
+  height: 100vh;
 }
 .rightcontainer{
-  border: 2px solid green;
-  height: 800px;
-  width: 70%;
+  /* border: 2px solid blue; */
+  flex-basis: 25%;
+  position: sticky;
+  align-self: flex-start;
+  top: 70px;
+  height: 100vh;
+}
+.maincontainer{
+  /* border: 2px solid black; */
+  flex-basis: 45%;
+}
 
+.links a{ 
+  margin: 25px 20px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+
+}
+
+.links a img{
+  width: 35px;
+  margin-right: 25px;
+}
+.maincont{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.story{
+  /* flex-basis: 25%; */
+  height: 120px;
+  padding-top: 30px;
+  position: relative;
+  background-image: url('images/cartman.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 12px;
+  width: 100px;
+
+}
+.story img{
+  position: absolute;
+  width: 40px;
+  border-radius: 50%;
+  top:10px;
+  left: 10px;
+  border-radius: 10px solid black;
+}
+.story p{
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  font-weight: bold;
+}
+.event{
+  display: flex;
+  margin-bottom: 20px;
+  font-size: 16px;
+
+}
+.leftEve{
+
+  border-radius: 10px;
+  height: 65px;
+  width:65px;
+  margin-right: 15px;
+  padding-top: 10p;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0,0,0.1);
+}
+.event p{
+  font-size: 14px;
+}
+.leftEve span{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: ;
+  color: red;
+  font-weight: bold;
+}
+
+.eventTitle{
+  text-align: center;
+
+}
+
+.southparkImg{
+  width: 350px;
+  height: 250px;
 }
