added new story

--- a/src/App.css
+++ b/src/App.css
@@ -153,16 +153,30 @@ margin-left: 80px;
   margin-top: 20px;
 }
 .story{
-  /* flex-basis: 25%; */
+  
   height: 120px;
   padding-top: 30px;
   position: relative;
-  background-image: url('images/cartman.png');
+  /* background-image: url('images/cartman.png'); */
   background-position: center;
   background-size: cover;
   border-radius: 12px;
   width: 100px;
-
+}
+.story1{
+  background-image: url('images/cartman.png');
+}
+.story2{
+  background-image: url('images/stan.png');
+}
+.story3{
+  background-image: url('images/kenny.png');
+}
+.story4{
+  background-image: url('images/kely.png');
+}
+.story5{
+  background-image: url('images/wendy.png');
 }
 .story img{
   position: absolute;
@@ -220,4 +234,64 @@ margin-left: 80px;
 .southparkImg{
   width: 350px;
   height: 250px;
+}
+
+.postContainer{
+  width: 98%;
+  background: white;
+  border-radius: 8px;
+  padding: 20px;
+  columns: lightgray;
+}
+.userProfile{
+  display: flex;
+  align-items: center;
+
+}
+.userProfile img{
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.userProfile p{
+  font-weight: bold;
+  margin-bottom: -5px;
+}
+
+.userProfile span{
+  font-size: 14px;
+  margin-bottom: -50px;
+  margin-left: -100px;
+}
+
+.inputContainer{
+  padding-left: 55px;
+  padding-top: 20px;
+}
+.inputContainer input{
+  width: 100%;
+  background-color: transparent;
+  padding: 10px;
+  outline: none;
+  border: none;
+  font-size: 18px;
+}
+.postLinks{
+  display: flex;
+  margin-top: 10px;
+}
+
+.postLinks a{
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  color: #626262;
+  margin-right: 30px;
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: bold;
+}
+.postLinks a img{
+  width: 30px;
+  margin-right: 10px;
 }
